fixes a style rule that did not properly apply visual clipping

--- a/pager.css
+++ b/pager.css
@@ -45,7 +45,8 @@
   color: #2a2a2a;
 }
 
-.pager .clipped {
+.pager .clipped,
+.pager-clipped {
   position: absolute !important;
   height: 1px;
   margin: 0;
